--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@type-challenges/utils": "^0.1.1",
     "axios": "^0.27.2",
     "next": "12.3.1",
     "react": "18.2.0",
