--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.27.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ts-toolbelt": "^9.6.0"
   },
   "devDependencies": {
     "@types/node": "18.7.21",
